ZCS-14267: added settings for reset password feature and preferences

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2533,6 +2533,17 @@ NAD_zimbraSMIMEFeature  = Funcions S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permet a l\u2019usuari final publicar i eliminar certificats S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activar S/MIME
 
+NAD_zimbraResetPasswordFeature = Funci\u00f3 de restabliment de la contrasenya
+LBL_zimbraFeatureResetPasswordStatus = Estat de la funci\u00f3 de restabliment de la contrasenya:
+NAD_AccountRecoveryOptions = Opcions de recuperaci\u00f3 del compte
+LBL_zimbraPrefPasswordRecoveryAddress = Adre\u00e7a de correu electr\u00f2nic de recuperaci\u00f3:
+MSG_zimbraPrefPasswordRecoveryAddress = Adre\u00e7a de correu electr\u00f2nic de recuperaci\u00f3
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Estat de verificaci\u00f3 de l'adre\u00e7a electr\u00f2nica de recuperaci\u00f3:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Estat de verificaci\u00f3 de l'adre\u00e7a electr\u00f2nica de recuperaci\u00f3
+recoveryAddressNotEmptyError = L'adre\u00e7a de correu electr\u00f2nic no es pot definir quan l'estat no est\u00e0 definit.
+recoveryAddressRequiredError = L'adre\u00e7a de correu electr\u00f2nic s'ha d'establir quan es verifica l'estat.
+recoveryAddressStatusPendingNotAllowedError = L'administrador no pot definir l'espera.
+
 externalAccountNote = Aquest compte fa servir transport de correu extern
 
 NAD_ProxyAllowedDomains = Dominis permesos pel servidor intermediari
@@ -2605,6 +2616,12 @@ NAD_WizConfigComplete = Configuraci\u00f3 de l\u2019aprovisionament autom\u00e0t
 NAD_Prov_ConfigSummary =  Resum de la configuraci\u00f3 de l\u2019aprovisionament autom\u00e0tic
 LBL_setPassword = configurat
 LBL_unsetPassword =  no configurat
+LBL_unset = No configurat
+LBL_enabled = Habilitat
+LBL_suspended = Susp\u00e8s
+LBL_disabled = Desactivat
+LBL_pending = PENDENTS
+LBL_verified = Verificat
 LBL_ManualProvision = Aprovisionament manual
 LBL_ApplyButton = Aplica
 LBL_ManualProvAccount = Compte per l\u2019aprovisionament manual
