--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2467,6 +2467,17 @@ NAD_zimbraSMIMEFeature = S/MIME-funktioner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Tillad slutbruger at udgive og fjerne S/MIME-certifikater
 LBL_zimbraFeatureSMIMEEnabled = Aktiver S/MIME
 
+NAD_zimbraResetPasswordFeature = Funktion til nulstilling af adgangskode
+LBL_zimbraFeatureResetPasswordStatus = Status for funktion til nulstilling af adgangskode:
+NAD_AccountRecoveryOptions = Indstillinger for kontogendannelse
+LBL_zimbraPrefPasswordRecoveryAddress = E-mailadresse til gendannelse:
+MSG_zimbraPrefPasswordRecoveryAddress = E-mailadresse til gendannelse
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status for bekr\u00e6ftelse af e-mailadresse til gendannelse:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status for bekr\u00e6ftelse af e-mailadresse til gendannelse
+recoveryAddressNotEmptyError = E-mailadresse kan ikke indstilles, n\u00e5r status ikke er angivet.
+recoveryAddressRequiredError = E-mailadresse skal indstilles, n\u00e5r status er bekr\u00e6ftet.
+recoveryAddressStatusPendingNotAllowedError = Afventende kan ikke indstilles af administrator.
+
 externalAccountNote = Denne konto bruger ekstern mailtransport
 
 NAD_ProxyAllowedDomains = Dom\u00e6ner, der er tilladt af proxy
@@ -2537,6 +2548,12 @@ NAD_WizConfigComplete = Konfiguration af automatisk provisionering fuldf\u00f8rt
 NAD_Prov_ConfigSummary = Oversigt over indstillinger for automatisk provisionering
 LBL_setPassword = angiv
 LBL_unsetPassword = fjern
+LBL_unset = Ikke indstillet
+LBL_enabled = Aktiveret
+LBL_suspended = Suspenderet
+LBL_disabled = handicappet
+LBL_pending = Verserende
+LBL_verified = verificeres
 LBL_ManualProvision = Manuel provisionering
 LBL_ApplyButton = Anvend
 LBL_ManualProvAccount = Konto for manuel provisionering
