--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2501,6 +2501,17 @@ NAD_zimbraSMIMEFeature = S/MIME-Funktionen
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Dem Endbenutzer erlauben, S/MIME-Zertifikate zu ver\u00f6ffentlichen und zu entfernen
 LBL_zimbraFeatureSMIMEEnabled = S/MIME aktivieren
 
+NAD_zimbraResetPasswordFeature = Funktion zum Zur\u00fccksetzen des Passworts
+LBL_zimbraFeatureResetPasswordStatus = Status der Funktion zum Zur\u00fccksetzen des Passworts:
+NAD_AccountRecoveryOptions = Kontowiederherstellungsoptionen
+LBL_zimbraPrefPasswordRecoveryAddress = Wiederherstellungs-eMail-Adresse:
+MSG_zimbraPrefPasswordRecoveryAddress = Wiederherstellungs-eMail-Adresse
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u00dcberpr\u00fcfungsstatus der Wiederherstellungs-E-Mail-Adresse:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u00dcberpr\u00fcfungsstatus der Wiederherstellungs-E-Mail-Adresse
+recoveryAddressNotEmptyError = Die E-Mail-Adresse kann nicht festgelegt werden, wenn der Status nicht festgelegt ist.
+recoveryAddressRequiredError = Die E-Mail-Adresse muss festgelegt werden, wenn der Status \u00fcberpr\u00fcft wird.
+recoveryAddressStatusPendingNotAllowedError = \u201eAusstehend\u201c kann vom Administrator nicht festgelegt werden.
+
 externalAccountNote = Dieser Account nutzt den externen Mailtransport.
 
 NAD_ProxyAllowedDomains = Vom Proxy erlaubte Domains
@@ -2573,6 +2584,12 @@ NAD_WizConfigComplete = Konfiguration der automatischen Bereitstellung wurde abg
 NAD_Prov_ConfigSummary = Zusammenfassung der Einstellungen f\u00fcr die automatische Bereitstellung
 LBL_setPassword = festlegen
 LBL_unsetPassword = aufheben
+LBL_unset = Nicht eingestellt
+LBL_enabled = aktiviert
+LBL_suspended = Suspendiert
+LBL_disabled = Deaktiviert
+LBL_pending = steht aus
+LBL_verified = Verifiziert
 LBL_ManualProvision = Manuelle Bereitstellung
 LBL_ApplyButton = Anwenden
 LBL_ManualProvAccount = Account f\u00fcr manuelle Bereitstellung
