--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2528,6 +2528,17 @@ NAD_zimbraSMIMEFeature = S/MIME funtzioak
 LBL_zimbraFeatureManageSMIMECertificateEnabled = S/MIME ziurtagiriak publikatzea eta ezabatzea baimentzen diote azken erabiltzaileari.
 LBL_zimbraFeatureSMIMEEnabled = S/MIME aktibatu
 
+NAD_zimbraResetPasswordFeature = Pasahitza berrezartzeko eginbidea
+LBL_zimbraFeatureResetPasswordStatus = Pasahitza berrezartzeko funtzioaren egoera:
+NAD_AccountRecoveryOptions = Kontua berreskuratzeko aukerak
+LBL_zimbraPrefPasswordRecoveryAddress = Berreskuratzeko helbide elektronikoa:
+MSG_zimbraPrefPasswordRecoveryAddress = Berreskuratzeko helbide elektronikoa
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Berreskuratzeko helbide elektronikoa egiaztatzeko egoera:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Berreskuratzeko helbide elektronikoa egiaztatzeko egoera
+recoveryAddressNotEmptyError = Helbide elektronikoa ezin da ezarri egoera ezarri gabe dagoenean.
+recoveryAddressRequiredError = Helbide elektronikoa ezarri behar da egoera egiaztatzen denean.
+recoveryAddressStatusPendingNotAllowedError = Zain dagoen administratzaileak ezin du ezarri.
+
 externalAccountNote = Kontu honek kanpo postako garraioa erabiltzen du
 
 NAD_ProxyAllowedDomains = Proxyrengatik baimenduriko domeinuak
@@ -2600,6 +2611,12 @@ NAD_WizConfigComplete = Hornikuntza automatikoaren konfigurazioa amaituta
 NAD_Prov_ConfigSummary = Hornikuntza automatikoaren konfigurazioaren laburpena
 LBL_setPassword = konfiguratua
 LBL_unsetPassword = konfigurazio gabe
+LBL_unset = Ezarrita
+LBL_enabled = Gaituta
+LBL_suspended = Etenda
+LBL_disabled = Desgaituta
+LBL_pending = zain
+LBL_verified = Egiaztatuta
 LBL_ManualProvision = Eskuzko hornikuntza
 LBL_ApplyButton = Aplikatu
 LBL_ManualProvAccount = Hornikuntza automatikorako kontua
