--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -2512,6 +2512,17 @@ NAD_zimbraSMIMEFeature = Fonctions S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Autoriser l\u2019utilisateur final \u00e0 publier et supprimer les certificats S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activer S/MIME
 
+NAD_zimbraResetPasswordFeature = Fonction de r\u00e9initialisation du mot de passe
+LBL_zimbraFeatureResetPasswordStatus = \u00c9tat de la fonction de r\u00e9initialisation du mot de passe :
+NAD_AccountRecoveryOptions = Options de r\u00e9cup\u00e9ration du compte
+LBL_zimbraPrefPasswordRecoveryAddress = Adresse mail de secours:
+MSG_zimbraPrefPasswordRecoveryAddress = Adresse mail de secours
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Statut de v\u00e9rification de l'adresse e-mail de r\u00e9cup\u00e9ration :
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Statut de v\u00e9rification de l'adresse e-mail de r\u00e9cup\u00e9ration
+recoveryAddressNotEmptyError = L'adresse e-mail ne peut pas \u00eatre d\u00e9finie lorsque le statut n'est pas d\u00e9fini.
+recoveryAddressRequiredError = L'adresse e-mail doit \u00eatre d\u00e9finie lorsque le statut est v\u00e9rifi\u00e9.
+recoveryAddressStatusPendingNotAllowedError = En attente ne peut pas \u00eatre d\u00e9fini par l'administrateur.
+
 externalAccountNote = Ce compte utilise un protocole de transport de mail externe
 
 NAD_ProxyAllowedDomains = Proxy des domaines autoris\u00e9s
@@ -2584,6 +2595,12 @@ NAD_WizConfigComplete = Configuration du provisionnement auto termin\u00e9e
 NAD_Prov_ConfigSummary = R\u00e9capitulatif des param\u00e8tres de provisionnement auto
 LBL_setPassword = d\u00e9finir
 LBL_unsetPassword = annuler d\u00e9finition
+LBL_unset = Pas encore d\u00e9fini
+LBL_enabled = Activ\u00e9e
+LBL_suspended = Suspendu
+LBL_disabled = D\u00e9sactiv\u00e9
+LBL_pending = en attendant
+LBL_verified = V\u00e9rifi\u00e9
 LBL_ManualProvision = Provisionnement manuel
 LBL_ApplyButton = Appliquer
 LBL_ManualProvAccount = Compte pour le provisionnement manuel
