--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2549,6 +2549,17 @@ NAD_zimbraSMIMEFeature  = S/MIME Features
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Allow end user to publish and remove S/MIME certificates
 LBL_zimbraFeatureSMIMEEnabled = Enable S/MIME
 
+NAD_zimbraResetPasswordFeature = Zna\u010dajka ponovnog postavljanja lozinke
+LBL_zimbraFeatureResetPasswordStatus = Status zna\u010dajke poni\u0161tavanja zaporke:
+NAD_AccountRecoveryOptions = Mogu\u0107nosti oporavka ra\u010duna
+LBL_zimbraPrefPasswordRecoveryAddress = Adresa e-po\u0161te za oporavak:
+MSG_zimbraPrefPasswordRecoveryAddress = Adresa e-po\u0161te za oporavak
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status provjere adrese e-po\u0161te za oporavak:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status provjere adrese e-po\u0161te za oporavak
+recoveryAddressNotEmptyError = Adresa e-po\u0161te ne mo\u017ee se postaviti kada status nije postavljen.
+recoveryAddressRequiredError = Adresa e-po\u0161te mora biti postavljena kada se status potvrdi.
+recoveryAddressStatusPendingNotAllowedError = Na \u010dekanju ne mo\u017ee postaviti administrator.
+
 externalAccountNote = This account uses external mail transport
 
 NAD_ProxyAllowedDomains = Proxy Allowed Domains
@@ -2621,6 +2632,12 @@ NAD_WizConfigComplete = Auto-provision configuration complete
 NAD_Prov_ConfigSummary =  Summary of auto-provision settings
 LBL_setPassword = set
 LBL_unsetPassword =  unset
+LBL_unset = Nespreman
+LBL_enabled = Omogu\u0107eno
+LBL_suspended = Suspendiran
+LBL_disabled = Onemogu\u0107eno
+LBL_pending = U tijeku
+LBL_verified = potvr\u0111en
 LBL_ManualProvision = Manual provisioning
 LBL_ApplyButton = Apply
 LBL_ManualProvAccount = Account for manual provision
