--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2537,6 +2537,17 @@ NAD_zimbraSMIMEFeature = S/MIME szolg\u00e1ltat\u00e1sok
 LBL_zimbraFeatureManageSMIMECertificateEnabled = S/MIME tan\u00fas\u00edtv\u00e1nyok k\u00f6zz\u00e9t\u00e9tel\u00e9nek \u00e9s elt\u00e1vol\u00edt\u00e1s\u00e1nak enged\u00e9lyez\u00e9se v\u00e9gfelhaszn\u00e1l\u00f3k sz\u00e1m\u00e1ra
 LBL_zimbraFeatureSMIMEEnabled = S/MIME enged\u00e9lyez\u00e9se
 
+NAD_zimbraResetPasswordFeature = Jelsz\u00f3-vissza\u00e1ll\u00edt\u00e1si funkci\u00f3
+LBL_zimbraFeatureResetPasswordStatus = A jelsz\u00f3-vissza\u00e1ll\u00edt\u00e1si funkci\u00f3 \u00e1llapota:
+NAD_AccountRecoveryOptions = Fi\u00f3k-helyre\u00e1ll\u00edt\u00e1si lehet\u0151s\u00e9gek
+LBL_zimbraPrefPasswordRecoveryAddress = M\u00e1sodlagos e-mail c\u00edmet:
+MSG_zimbraPrefPasswordRecoveryAddress = M\u00e1sodlagos e-mail c\u00edmet
+LBL_zimbraPrefPasswordRecoveryAddressStatus = A helyre\u00e1ll\u00edt\u00e1si e-mail-c\u00edm ellen\u0151rz\u00e9si \u00e1llapota:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = A helyre\u00e1ll\u00edt\u00e1si e-mail-c\u00edm ellen\u0151rz\u00e9si \u00e1llapota
+recoveryAddressNotEmptyError = Az e-mail c\u00edm nem \u00e1ll\u00edthat\u00f3 be, ha az \u00e1llapot nincs be\u00e1ll\u00edtva.
+recoveryAddressRequiredError = Az e-mail c\u00edmet az \u00e1llapot ellen\u0151rz\u00e9sekor kell be\u00e1ll\u00edtani.
+recoveryAddressStatusPendingNotAllowedError = F\u00fcgg\u0151ben nem \u00e1ll\u00edthat\u00f3 be a rendszergazda.
+
 externalAccountNote = Ez a fi\u00f3k k\u00fcls\u0151 lev\u00e9l\u00e1tvitelt haszn\u00e1l
 
 NAD_ProxyAllowedDomains = Proxyhoz enged\u00e9lyezett tartom\u00e1nyok
@@ -2609,6 +2620,12 @@ NAD_WizConfigComplete = Automatikus l\u00e9tes\u00edt\u00e9s konfigur\u00e1ci\u0
 NAD_Prov_ConfigSummary = Az automatikus l\u00e9tes\u00edt\u00e9s be\u00e1ll\u00edt\u00e1sainak \u00f6sszegz\u00e9se
 LBL_setPassword = be\u00e1ll\u00edt
 LBL_unsetPassword = be\u00e1ll\u00edt\u00e1s visszavon\u00e1sa
+LBL_unset = Nincs be\u00e1ll\u00edtva
+LBL_enabled = Bekapcsolt
+LBL_suspended = Felf\u00fcggesztett
+LBL_disabled = Tiltva
+LBL_pending = F\u00fcgg\u0151ben lev\u0151
+LBL_verified = Ellen\u0151rz\u00f6tt
 LBL_ManualProvision = K\u00e9zi l\u00e9tes\u00edt\u00e9s
 LBL_ApplyButton = Alkalmaz
 LBL_ManualProvAccount = Fi\u00f3k a k\u00e9zi l\u00e9tes\u00edt\u00e9shez
