--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2541,6 +2541,17 @@ NAD_zimbraSMIMEFeature = Fitur S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Izinkan pengguna akhir untuk mempublikasikan dan menghapus sertifikat S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Aktifkan S/MIME
 
+NAD_zimbraResetPasswordFeature = Fitur Reset Kata Sandi
+LBL_zimbraFeatureResetPasswordStatus = Status fitur pengaturan ulang kata sandi:
+NAD_AccountRecoveryOptions = Opsi Pemulihan Akun
+LBL_zimbraPrefPasswordRecoveryAddress = Alamat email pemulihan:
+MSG_zimbraPrefPasswordRecoveryAddress = Alamat email pemulihan
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status verifikasi alamat email pemulihan:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status verifikasi alamat email pemulihan
+recoveryAddressNotEmptyError = Alamat email tidak dapat disetel jika statusnya tidak disetel.
+recoveryAddressRequiredError = Alamat email harus ditetapkan ketika status terverifikasi.
+recoveryAddressStatusPendingNotAllowedError = Pending tidak dapat diatur oleh administrator.
+
 externalAccountNote = Akun ini menggunakan transportasi email eksternal
 
 NAD_ProxyAllowedDomains = Domain Proksi yang Diperbolehkan
@@ -2613,6 +2624,12 @@ NAD_WizConfigComplete = Konfigurasi Provisioning Otomatis Selesai
 NAD_Prov_ConfigSummary = Ringkasan pengaturan provisioning otomatis
 LBL_setPassword = atur
 LBL_unsetPassword = batal atur
+LBL_unset = Tidak diatur
+LBL_enabled = Diaktifkan
+LBL_suspended = Tergantung
+LBL_disabled = Dengan disabilitas
+LBL_pending = Tertunda
+LBL_verified = Diverifikasi
 LBL_ManualProvision = Provisioning manual
 LBL_ApplyButton = Terapkan
 LBL_ManualProvAccount = Akun untuk provisioning manual
