--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2467,6 +2467,17 @@ NAD_zimbraSMIMEFeature = Funzioni S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Consenti all\u2019utente finale di pubblicare e rimuovere certificati S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Abilita S/MIME
 
+NAD_zimbraResetPasswordFeature = Funzionalit\u00e0 di reimpostazione della password
+LBL_zimbraFeatureResetPasswordStatus = Stato della funzione di reimpostazione della password:
+NAD_AccountRecoveryOptions = Opzioni di recupero dell'account
+LBL_zimbraPrefPasswordRecoveryAddress = Indirizzo email di recupero:
+MSG_zimbraPrefPasswordRecoveryAddress = Indirizzo email di recupero
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Stato di verifica dell'indirizzo email di recupero:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Stato di verifica dell'indirizzo email di recupero
+recoveryAddressNotEmptyError = L'indirizzo e-mail non pu\u00f2 essere impostato quando lo stato non \u00e8 impostato.
+recoveryAddressRequiredError = L'indirizzo email deve essere impostato una volta verificato lo stato.
+recoveryAddressStatusPendingNotAllowedError = In sospeso non pu\u00f2 essere impostato dall'amministratore.
+
 externalAccountNote = Questo account utilizza il trasporto posta esterno
 
 NAD_ProxyAllowedDomains = Domini proxy consentiti
@@ -2537,6 +2548,12 @@ NAD_WizConfigComplete = Configurazione del provisioning automatico completata
 NAD_Prov_ConfigSummary = Riepilogo delle impostazioni di provisioning automatico
 LBL_setPassword = imposta
 LBL_unsetPassword = annulla impostazione
+LBL_unset = Non impostato
+LBL_enabled = Abilitato
+LBL_suspended = SOSPESO
+LBL_disabled = Disabilitato
+LBL_pending = in attesa di
+LBL_verified = verificata
 LBL_ManualProvision = Manual provisioning
 LBL_ApplyButton = Applica
 LBL_ManualProvAccount = Account per provisioning manuale
