--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2537,6 +2537,17 @@ NAD_zimbraSMIMEFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u05d0\u05e4\u05e9\u05e8 \u05dc\u05de\u05e9\u05ea\u05de\u05e9 \u05d4\u05e7\u05e6\u05d4 \u05dc\u05e4\u05e8\u05e1\u05dd \u05d5\u05dc\u05d4\u05e1\u05d9\u05e8 \u05ea\u05e2\u05d5\u05d3\u05d5\u05ea S/MIME
 LBL_zimbraFeatureSMIMEEnabled = \u05d4\u05e4\u05e2\u05dc S/MIME
 
+NAD_zimbraResetPasswordFeature = \u05ea\u05db\u05d5\u05e0\u05ea \u05d0\u05d9\u05e4\u05d5\u05e1 \u05e1\u05d9\u05e1\u05de\u05d4
+LBL_zimbraFeatureResetPasswordStatus = \u05de\u05e6\u05d1 \u05ea\u05db\u05d5\u05e0\u05ea \u05d0\u05d9\u05e4\u05d5\u05e1 \u05d4\u05e1\u05d9\u05e1\u05de\u05d4:
+NAD_AccountRecoveryOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05e9\u05d7\u05d6\u05d5\u05e8 \u05d7\u05e9\u05d1\u05d5\u05df
+LBL_zimbraPrefPasswordRecoveryAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9 \u05dc\u05e9\u05d9\u05d7\u05d6\u05d5\u05e8:
+MSG_zimbraPrefPasswordRecoveryAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9 \u05dc\u05e9\u05d9\u05d7\u05d6\u05d5\u05e8
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u05e1\u05d8\u05d8\u05d5\u05e1 \u05d0\u05d9\u05de\u05d5\u05ea \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0"\u05dc \u05dc\u05e9\u05d7\u05d6\u05d5\u05e8:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u05e1\u05d8\u05d8\u05d5\u05e1 \u05d0\u05d9\u05de\u05d5\u05ea \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0"\u05dc \u05dc\u05e9\u05d7\u05d6\u05d5\u05e8
+recoveryAddressNotEmptyError = \u05dc\u05d0 \u05e0\u05d9\u05ea\u05df \u05dc\u05d4\u05d2\u05d3\u05d9\u05e8 \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0"\u05dc \u05db\u05d0\u05e9\u05e8 \u05d4\u05e1\u05d8\u05d8\u05d5\u05e1 \u05d0\u05d9\u05e0\u05d5 \u05de\u05d5\u05d2\u05d3\u05e8.
+recoveryAddressRequiredError = \u05d9\u05e9 \u05dc\u05d4\u05d2\u05d3\u05d9\u05e8 \u05db\u05ea\u05d5\u05d1\u05ea \u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9 \u05db\u05d0\u05e9\u05e8 \u05d4\u05e1\u05d8\u05d8\u05d5\u05e1 \u05de\u05d0\u05d5\u05de\u05ea.
+recoveryAddressStatusPendingNotAllowedError = \u05de\u05e0\u05d4\u05dc \u05d4\u05de\u05e2\u05e8\u05db\u05ea \u05dc\u05d0 \u05d9\u05db\u05d5\u05dc \u05dc\u05d4\u05d2\u05d3\u05d9\u05e8 \u05d1\u05d4\u05de\u05ea\u05e0\u05d4.
+
 externalAccountNote = \u05d7\u05e9\u05d1\u05d5\u05df \u05d6\u05d4 \u05de\u05e9\u05ea\u05de\u05e9 \u05d1\u05d4\u05e2\u05d1\u05e8\u05ea \u05d3\u05d5\u05d0\u05e8 \u05d7\u05d9\u05e6\u05d5\u05e0\u05d9\u05ea
 
 NAD_ProxyAllowedDomains = \u05ea\u05d7\u05d5\u05de\u05d9 Proxy \u05de\u05d5\u05ea\u05e8\u05d9\u05dd
@@ -2609,6 +2620,12 @@ NAD_WizConfigComplete = \u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05d4\u05e7\u05e6\
 NAD_Prov_ConfigSummary = \u05e1\u05d9\u05db\u05d5\u05dd \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d4\u05e7\u05e6\u05d0\u05d4 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea
 LBL_setPassword = \u05d4\u05d2\u05d3\u05e8
 LBL_unsetPassword = \u05d1\u05d9\u05d8\u05d5\u05dc \u05d4\u05d2\u05d3\u05e8\u05d4
+LBL_unset = \u05dc\u05d0 \u05de\u05d5\u05db\u05df
+LBL_enabled = \u05de\u05d5\u05e4\u05e2\u05dc
+LBL_suspended = \u05de\u05d5\u05bc\u05e9\u05c1\u05d4\u05b6\u05d4
+LBL_disabled = \u05e0\u05b8\u05db\u05b6\u05d4
+LBL_pending = \u05de\u05de\u05ea\u05d9\u05df \u05dc
+LBL_verified = \u05de\u05b0\u05d0\u05d5\u05bc\u05de\u05b8\u05ea
 LBL_ManualProvision = \u05d4\u05e7\u05e6\u05d0\u05d4 \u05d9\u05d3\u05e0\u05d9\u05ea
 LBL_ApplyButton = \u05d4\u05d7\u05dc
 LBL_ManualProvAccount = \u05d7\u05e9\u05d1\u05d5\u05df \u05dc\u05d4\u05e7\u05e6\u05d0\u05d4 \u05d9\u05d3\u05e0\u05d9\u05ea
