--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2491,6 +2491,17 @@ NAD_zimbraSMIMEFeature = S/MIME\u306e\u6a5f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u304cS/MIME\u8a3c\u660e\u66f8\u3092\u516c\u958b/\u524a\u9664\u3059\u308b\u306e\u3092\u8a31\u53ef\u3059\u308b
 LBL_zimbraFeatureSMIMEEnabled = S/MIME\u3092\u6709\u52b9\u306b\u3059\u308b
 
+NAD_zimbraResetPasswordFeature = \u30d1\u30b9\u30ef\u30fc\u30c9\u30ea\u30bb\u30c3\u30c8\u6a5f\u80fd
+LBL_zimbraFeatureResetPasswordStatus = \u30d1\u30b9\u30ef\u30fc\u30c9\u30ea\u30bb\u30c3\u30c8\u6a5f\u80fd\u306e\u30b9\u30c6\u30fc\u30bf\u30b9\uff1a
+NAD_AccountRecoveryOptions = \u30a2\u30ab\u30a6\u30f3\u30c8\u56de\u5fa9\u30aa\u30d7\u30b7\u30e7\u30f3
+LBL_zimbraPrefPasswordRecoveryAddress = \u4e88\u5099\u306e\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\uff1a
+MSG_zimbraPrefPasswordRecoveryAddress = \u4e88\u5099\u306e\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u4e88\u5099\u306e\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306e\u691c\u8a3c\u30b9\u30c6\u30fc\u30bf\u30b9\uff1a
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u4e88\u5099\u306e\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306e\u691c\u8a3c\u30b9\u30c6\u30fc\u30bf\u30b9
+recoveryAddressNotEmptyError = \u30b9\u30c6\u30fc\u30bf\u30b9\u304c\u672a\u8a2d\u5b9a\u306e\u5834\u5408\u3001\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306f\u8a2d\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002
+recoveryAddressRequiredError = \u30b9\u30c6\u30fc\u30bf\u30b9\u304c\u691c\u8a3c\u6e08\u307f\u306e\u5834\u5408\u3001\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306e\u8a2d\u5b9a\u304c\u5fc5\u8981\u3067\u3059\u3002
+recoveryAddressStatusPendingNotAllowedError = \u7ba1\u7406\u8005\u306f\u4fdd\u7559\u4e2d\u3092\u8a2d\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002
+
 externalAccountNote = \u3053\u306e\u30a2\u30ab\u30a6\u30f3\u30c8\u306f\u5916\u90e8\u30e1\u30fc\u30eb\u30c8\u30e9\u30f3\u30b9\u30dd\u30fc\u30c8\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059
 
 NAD_ProxyAllowedDomains = \u30d7\u30ed\u30ad\u30b7\u8a31\u53ef\u30c9\u30e1\u30a4\u30f3
@@ -2563,6 +2574,12 @@ NAD_WizConfigComplete = \u81ea\u52d5\u63d0\u4f9b\u8a2d\u5b9a\u304c\u5b8c\u4e86\u
 NAD_Prov_ConfigSummary = \u81ea\u52d5\u63d0\u4f9b\u8a2d\u5b9a\u306e\u8981\u7d04
 LBL_setPassword = \u8a2d\u5b9a
 LBL_unsetPassword = \u8a2d\u5b9a\u89e3\u9664
+LBL_unset = \u672a\u8a2d\u5b9a
+LBL_enabled = \u6709\u52b9
+LBL_suspended = \u4e00\u6642\u505c\u6b62
+LBL_disabled = \u7121\u52b9
+LBL_pending = \u4fdd\u7559\u4e2d
+LBL_verified = \u691c\u8a3c\u6e08\u307f
 LBL_ManualProvision = \u624b\u52d5\u63d0\u4f9b
 LBL_ApplyButton = \u9069\u7528
 LBL_ManualProvAccount = \u624b\u52d5\u63d0\u4f9b\u306e\u30a2\u30ab\u30a6\u30f3\u30c8
