--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2480,6 +2480,17 @@ NAD_zimbraSMIMEFeature = S/MIME \uae30\ub2a5
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \ucd5c\uc885 \uc0ac\uc6a9\uc790\uc758 S/MIME \uc778\uc99d\uc11c \uac8c\uc2dc \ubc0f \uc81c\uac70 \ud5c8\uc6a9
 LBL_zimbraFeatureSMIMEEnabled = S/MIME \uc0ac\uc6a9
 
+NAD_zimbraResetPasswordFeature = \ube44\ubc00\ubc88\ud638 \uc7ac\uc124\uc815 \uae30\ub2a5
+LBL_zimbraFeatureResetPasswordStatus = \ube44\ubc00\ubc88\ud638 \uc7ac\uc124\uc815 \uae30\ub2a5 \uc0c1\ud0dc:
+NAD_AccountRecoveryOptions = \uacc4\uc815 \ubcf5\uad6c \uc635\uc158
+LBL_zimbraPrefPasswordRecoveryAddress = \ubcf5\uad6c \uc774\uba54\uc77c \uc8fc\uc18c:
+MSG_zimbraPrefPasswordRecoveryAddress = \ubcf5\uad6c \uc774\uba54\uc77c \uc8fc\uc18c
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \ubcf5\uad6c \uc774\uba54\uc77c \uc8fc\uc18c \ud655\uc778 \uc0c1\ud0dc:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \ubcf5\uad6c \uc774\uba54\uc77c \uc8fc\uc18c \ud655\uc778 \uc0c1\ud0dc
+recoveryAddressNotEmptyError = \uc0c1\ud0dc\uac00 \uc124\uc815\ub418\uc9c0 \uc54a\uc73c\uba74 \uc774\uba54\uc77c \uc8fc\uc18c\ub97c \uc124\uc815\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+recoveryAddressRequiredError = \uc0c1\ud0dc\uac00 \ud655\uc778\ub418\uba74 \uc774\uba54\uc77c \uc8fc\uc18c\ub97c \uc124\uc815\ud574\uc57c \ud569\ub2c8\ub2e4.
+recoveryAddressStatusPendingNotAllowedError = \ubcf4\ub958\ub294 \uad00\ub9ac\uc790\uac00 \uc124\uc815\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+
 externalAccountNote = \uc774 \uacc4\uc815\uc740 \uc678\ubd80 \uba54\uc77c \uc804\uc1a1\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 
 NAD_ProxyAllowedDomains = \ud504\ub85d\uc2dc \ud5c8\uc6a9 \ub3c4\uba54\uc778
@@ -2552,6 +2563,12 @@ NAD_WizConfigComplete = \uc790\ub3d9 \ud504\ub85c\ube44\uc800\ub2dd \uad6c\uc131
 NAD_Prov_ConfigSummary = \uc790\ub3d9 \ud504\ub85c\ube44\uc800\ub2dd \uc124\uc815 \uc694\uc57d
 LBL_setPassword = \uc124\uc815
 LBL_unsetPassword = \uc124\uc815 \ud574\uc81c
+LBL_unset = \uc124\uc815\ub418\uc9c0 \uc54a\uc74c
+LBL_enabled = \uc0ac\uc6a9
+LBL_suspended = \ub9e4\ub2ec\ub9b0
+LBL_disabled = \uc7a5\uc560\uc778
+LBL_pending = \ub300\uae30 \uc911
+LBL_verified = \uac80\uc99d \ub428
 LBL_ManualProvision = \uc218\ub3d9 \ud504\ub85c\ube44\uc800\ub2dd
 LBL_ApplyButton = \uc801\uc6a9
 LBL_ManualProvAccount = \uc218\ub3d9 \ud504\ub85c\ube44\uc800\ub2dd\uc5d0 \ub300\ud55c \uacc4\uc815
