--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2537,6 +2537,17 @@ NAD_zimbraSMIMEFeature = Ciri S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Benarkan pengguna akhir untuk menerbitkan dan mengalih keluar sijil S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Dayakan S/MIME
 
+NAD_zimbraResetPasswordFeature = Ciri Tetapan Semula Kata Laluan
+LBL_zimbraFeatureResetPasswordStatus = Status ciri tetapan semula kata laluan:
+NAD_AccountRecoveryOptions = Pilihan Pemulihan Akaun
+LBL_zimbraPrefPasswordRecoveryAddress = Alamat e-mel pemulihan:
+MSG_zimbraPrefPasswordRecoveryAddress = Alamat e-mel pemulihan
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status pengesahan alamat e-mel pemulihan:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status pengesahan alamat e-mel pemulihan
+recoveryAddressNotEmptyError = Alamat e-mel tidak boleh ditetapkan apabila status tidak ditetapkan.
+recoveryAddressRequiredError = Alamat e-mel mesti ditetapkan apabila status disahkan.
+recoveryAddressStatusPendingNotAllowedError = Belum selesai tidak boleh ditetapkan oleh pentadbir.
+
 externalAccountNote = Akaun ini menggunakan pengangkutan mel luaran
 
 NAD_ProxyAllowedDomains = Domain Dibenarkan Proksi
@@ -2609,6 +2620,12 @@ NAD_WizConfigComplete = Konfigurasi autoperuntukan selesai
 NAD_Prov_ConfigSummary = Ringkasan tetapan autoperuntukan
 LBL_setPassword = tetapkan
 LBL_unsetPassword = nyahtetapkan
+LBL_unset = Tidak ditetapkan
+LBL_enabled = Diaktifkan
+LBL_suspended = Digantung
+LBL_disabled = Kurang Upaya
+LBL_pending = Yang belum selesai
+LBL_verified = Disahkan
 LBL_ManualProvision = Peruntukan manual
 LBL_ApplyButton = Gunakan
 LBL_ManualProvAccount = Akaun untuk peruntukan manual
