--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2467,6 +2467,17 @@ NAD_zimbraSMIMEFeature = S/MIME-functies
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Eindgebruiker toestaan om S/MIME-certificaten te publiceren en te verwijderen
 LBL_zimbraFeatureSMIMEEnabled = S/MIME inschakelen
 
+NAD_zimbraResetPasswordFeature = Functie voor het opnieuw instellen van wachtwoorden
+LBL_zimbraFeatureResetPasswordStatus = Status van de functie voor het opnieuw instellen van het wachtwoord:
+NAD_AccountRecoveryOptions = Account herstel opties
+LBL_zimbraPrefPasswordRecoveryAddress = Herstel-e-mailadres:
+MSG_zimbraPrefPasswordRecoveryAddress = E-mailadres voor herstel
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Verificatiestatus van herstel-e-mailadres:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Verificatiestatus van herstel-e-mailadres
+recoveryAddressNotEmptyError = Het e-mailadres kan niet worden ingesteld als de status niet is ingesteld.
+recoveryAddressRequiredError = Het e-mailadres moet worden ingesteld wanneer de status wordt geverifieerd.
+recoveryAddressStatusPendingNotAllowedError = In behandeling kan niet worden ingesteld door de beheerder.
+
 externalAccountNote = Deze account gebruikt extern e-mailtransport
 
 NAD_ProxyAllowedDomains = Proxy toegestande domeinen
@@ -2537,6 +2548,12 @@ NAD_WizConfigComplete = Configuratie van Automatische provisie voltooid
 NAD_Prov_ConfigSummary = Overzicht van instellingen voor automatische provisie
 LBL_setPassword = instellen
 LBL_unsetPassword = instellen ongedaan maken
+LBL_unset = Niet ingesteld
+LBL_enabled = Ingeschakeld
+LBL_suspended = Geschorst
+LBL_disabled = invalide
+LBL_pending = In afwachting
+LBL_verified = geverifieerd
 LBL_ManualProvision = Handmatige provisie
 LBL_ApplyButton = Toepassen
 LBL_ManualProvAccount = Account voor handmatige provisie
