--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2542,6 +2542,17 @@ NAD_zimbraSMIMEFeature  = S/MIME-funksjoner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Tillat at sluttbruker publiserer og fjerner S/MIME-sertifikater
 LBL_zimbraFeatureSMIMEEnabled = Aktiver S/MIME
 
+NAD_zimbraResetPasswordFeature = Funksjon for tilbakestilling av passord
+LBL_zimbraFeatureResetPasswordStatus = Status for funksjonen for tilbakestilling av passord:
+NAD_AccountRecoveryOptions = Alternativer for kontogjenoppretting
+LBL_zimbraPrefPasswordRecoveryAddress = Gjenopprettingsadresse:
+MSG_zimbraPrefPasswordRecoveryAddress = Gjenopprettingsadresse
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Bekreftelsesstatus for gjenopprettingsadresse:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Bekreftelsesstatus for e-postadresse for gjenoppretting
+recoveryAddressNotEmptyError = E-postadresse kan ikke angis n\u00e5r status er deaktivert.
+recoveryAddressRequiredError = E-postadresse m\u00e5 angis n\u00e5r status er bekreftet.
+recoveryAddressStatusPendingNotAllowedError = Venter kan ikke angis av administrator.
+
 externalAccountNote = Denne kontoen bruker ekstern e-posttransport
 
 NAD_ProxyAllowedDomains = Proxy-tillatte domener
@@ -2614,6 +2625,12 @@ NAD_WizConfigComplete = Konfigurasjonen av automatisk klargj\u00f8ring er fullf\
 NAD_Prov_ConfigSummary =  Sammendrag av innstillinger for automatisk klargj\u00f8ring
 LBL_setPassword = angi
 LBL_unsetPassword =  fjern angivelse
+LBL_unset = Ikke satt
+LBL_enabled = aktivert
+LBL_suspended = suspendert
+LBL_disabled = Funksjonshemmet
+LBL_pending = Avventer
+LBL_verified = verifisert
 LBL_ManualProvision = Manuell klargj\u00f8ring
 LBL_ApplyButton = Bruk
 LBL_ManualProvAccount = Konto for manuell klargj\u00f8ring
