--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2526,6 +2526,17 @@ NAD_zimbraSMIMEFeature = Funkcje S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Pozw\u00f3l u\u017cytkownikowi ko\u0144cowemu publikowa\u0107 i usuwa\u0107 certyfikaty S/MIME
 LBL_zimbraFeatureSMIMEEnabled = W\u0142\u0105cz S/MIME
 
+NAD_zimbraResetPasswordFeature = Funkcja resetowania has\u0142a
+LBL_zimbraFeatureResetPasswordStatus = Stan funkcji resetowania has\u0142a:
+NAD_AccountRecoveryOptions = Opcje odzyskiwania konta
+LBL_zimbraPrefPasswordRecoveryAddress = Odzyskiwanie adres e-mail:
+MSG_zimbraPrefPasswordRecoveryAddress = Odzyskiwanie adres e-mail
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Stan weryfikacji adresu e-mail odzyskiwania:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Stan weryfikacji adresu e-mail odzyskiwania
+recoveryAddressNotEmptyError = Nie mo\u017cna ustawi\u0107 adresu e-mail, gdy status jest nieustawiony.
+recoveryAddressRequiredError = Adres e-mail musi zosta\u0107 ustawiony podczas weryfikacji statusu.
+recoveryAddressStatusPendingNotAllowedError = Oczekuj\u0105ce nie mo\u017ce by\u0107 ustawione przez administratora.
+
 externalAccountNote = To konto korzysta z zewn\u0119trznego transportu poczty
 
 NAD_ProxyAllowedDomains = Domeny dopuszczone przez proxy
@@ -2598,6 +2609,12 @@ NAD_WizConfigComplete = Zako\u0144czono konfiguracj\u0119 obs\u0142ugi automatyc
 NAD_Prov_ConfigSummary = Podsumowanie ustawie\u0144 obs\u0142ugi automatycznej
 LBL_setPassword = ustaw
 LBL_unsetPassword = usu\u0144 ustawienie
+LBL_unset = Nie ustawiony
+LBL_enabled = W\u0142\u0105czone
+LBL_suspended = Zawieszony
+LBL_disabled = niepe\u0142nosprawny
+LBL_pending = W oczekiwaniu
+LBL_verified = Zweryfikowany
 LBL_ManualProvision = Obs\u0142uga r\u0119czna
 LBL_ApplyButton = Zastosuj
 LBL_ManualProvAccount = Konto do obs\u0142ugi r\u0119cznej
