--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2537,6 +2537,17 @@ NAD_zimbraSMIMEFeature = Caracteristici S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permite utilizatorului final s\u0103 publice \u015fi s\u0103 elimine certificatele S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activare S/MIME
 
+NAD_zimbraResetPasswordFeature = Func\u021bia de resetare a parolei
+LBL_zimbraFeatureResetPasswordStatus = Starea func\u021biei de resetare a parolei:
+NAD_AccountRecoveryOptions = Op\u021biuni de recuperare a contului
+LBL_zimbraPrefPasswordRecoveryAddress = Adresa de e-mail de recuperare:
+MSG_zimbraPrefPasswordRecoveryAddress = Adresa de e-mail de recuperare
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Starea de verificare a adresei de e-mail de recuperare:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Starea de verificare a adresei de e-mail de recuperare
+recoveryAddressNotEmptyError = Adresa de e-mail nu poate fi setat\u0103 c\u00e2nd starea este nesetata.
+recoveryAddressRequiredError = Adresa de e-mail trebuie setat\u0103 c\u00e2nd starea este verificat\u0103.
+recoveryAddressStatusPendingNotAllowedError = \u00cen a\u0219teptare nu poate fi setat de administrator.
+
 externalAccountNote = Acest cont folose\u015fte transportul mesajelor externe
 
 NAD_ProxyAllowedDomains = Domenii permise de proxy
@@ -2609,6 +2620,12 @@ NAD_WizConfigComplete = Configurare asigurare automat\u0103 a accesului finaliza
 NAD_Prov_ConfigSummary = Sumarul set\u0103rilor de asigurare automat\u0103 a accesului
 LBL_setPassword = seteaz\u0103
 LBL_unsetPassword = anuleaz\u0103 setarea
+LBL_unset = Nu este setat
+LBL_enabled = Activat
+LBL_suspended = Suspendat
+LBL_disabled = invalid
+LBL_pending = In asteptarea
+LBL_verified = Verificat
 LBL_ManualProvision = Asigurare manual\u0103 a accesului
 LBL_ApplyButton = Aplicare
 LBL_ManualProvAccount = Cont pentru asigurare manual\u0103 a accesului
