--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2537,6 +2537,17 @@ NAD_zimbraSMIMEFeature = S/MIME funkcije
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Kon\u010dnemu uporabniku dovoli objavljanje in odstranjevanje S/MIME certifikatov
 LBL_zimbraFeatureSMIMEEnabled = Omogo\u010di S/MIME
 
+NAD_zimbraResetPasswordFeature = Funkcija ponastavitve gesla
+LBL_zimbraFeatureResetPasswordStatus = Stanje funkcije ponastavitve gesla:
+NAD_AccountRecoveryOptions = Mo\u017enosti obnovitve ra\u010duna
+LBL_zimbraPrefPasswordRecoveryAddress = Nadomestni e-po\u0161tni naslov:
+MSG_zimbraPrefPasswordRecoveryAddress = Nadomestni e-po\u0161tni naslov
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Stanje preverjanja obnovitvenega e-po\u0161tnega naslova:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Stanje preverjanja obnovitvenega e-po\u0161tnega naslova
+recoveryAddressNotEmptyError = E-po\u0161tnega naslova ni mogo\u010de nastaviti, ko status ni nastavljen.
+recoveryAddressRequiredError = E-po\u0161tni naslov mora biti nastavljen, ko je status preverjen.
+recoveryAddressStatusPendingNotAllowedError = \u010cakajo\u010dega skrbnik ne more nastaviti.
+
 externalAccountNote = Ta ra\u010dun uporablja zunanji prenos po\u0161te
 
 NAD_ProxyAllowedDomains = Domene, ki jih dovoljuje proxy
@@ -2609,6 +2620,12 @@ NAD_WizConfigComplete = Konfiguracija samodejnega omogo\u010danja je zaklju\u010
 NAD_Prov_ConfigSummary = Povzetek nastavitev samodejnega omogo\u010danja 
 LBL_setPassword = nastavi
 LBL_unsetPassword = odstrani
+LBL_unset = Ni nastavljeno
+LBL_enabled = Omogo\u010deno
+LBL_suspended = Za\u010dasno
+LBL_disabled = Onemogo\u010deno
+LBL_pending = V teku
+LBL_verified = Preverjeno
 LBL_ManualProvision = Ro\u010dno omogo\u010danje 
 LBL_ApplyButton = Uporabi
 LBL_ManualProvAccount = Ra\u010dun za ro\u010dno omogo\u010danje 
