--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2467,6 +2467,17 @@ NAD_zimbraSMIMEFeature = S/MIME-funktioner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Till\u00e5t slutanv\u00e4ndaren att publicera och ta bort S/MIME-certifikat
 LBL_zimbraFeatureSMIMEEnabled = Aktivera S/MIME
 
+NAD_zimbraResetPasswordFeature = Funktion f\u00f6r \u00e5terst\u00e4llning av l\u00f6senord
+LBL_zimbraFeatureResetPasswordStatus = Status f\u00f6r funktion f\u00f6r \u00e5terst\u00e4llning av l\u00f6senord:
+NAD_AccountRecoveryOptions = Alternativ f\u00f6r konto\u00e5terst\u00e4llning
+LBL_zimbraPrefPasswordRecoveryAddress = E-postadress f\u00f6r \u00e5terst\u00e4llning:
+MSG_zimbraPrefPasswordRecoveryAddress = E-postadress f\u00f6r \u00e5terst\u00e4llning
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status f\u00f6r verifiering av e-postadress f\u00f6r \u00e5terst\u00e4llning:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status f\u00f6r verifiering av e-postadress f\u00f6r \u00e5terst\u00e4llning
+recoveryAddressNotEmptyError = E-postadress kan inte st\u00e4llas in n\u00e4r status \u00e4r inst\u00e4lld.
+recoveryAddressRequiredError = E-postadress m\u00e5ste anges n\u00e4r status verifieras.
+recoveryAddressStatusPendingNotAllowedError = V\u00e4ntande kan inte st\u00e4llas in av administrat\u00f6ren.
+
 externalAccountNote = Extern e-posttransport anv\u00e4nds f\u00f6r det h\u00e4r kontot
 
 NAD_ProxyAllowedDomains = Proxy-till\u00e5tna dom\u00e4ner
@@ -2537,6 +2548,12 @@ NAD_WizConfigComplete = Konfigurationen av automatisk import \u00e4r slutf\u00f6
 NAD_Prov_ConfigSummary = Sammanfattning av inst\u00e4llningar f\u00f6r automatisk import
 LBL_setPassword = st\u00e4ll in
 LBL_unsetPassword = avbryt
+LBL_unset = inte inst\u00e4lld
+LBL_enabled = aktiverad
+LBL_suspended = Suspenderad
+LBL_disabled = inaktiverad
+LBL_pending = Avvaktan
+LBL_verified = Verifierad
 LBL_ManualProvision = Manuell import
 LBL_ApplyButton = Anv\u00e4nd
 LBL_ManualProvAccount = Konto f\u00f6r manuell import
