--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -2535,6 +2535,17 @@ NAD_zimbraSMIMEFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30 
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e43\u0e2b\u0e49\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e1b\u0e23\u0e30\u0e01\u0e32\u0e28\u0e41\u0e25\u0e30\u0e40\u0e2d\u0e32\u0e43\u0e1a\u0e23\u0e31\u0e1a\u0e23\u0e2d\u0e07 S/MIME \u0e2d\u0e2d\u0e01
 LBL_zimbraFeatureSMIMEEnabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19 S/MIME
 
+NAD_zimbraResetPasswordFeature = \u0e04\u0e38\u0e13\u0e2a\u0e21\u0e1a\u0e31\u0e15\u0e34\u0e01\u0e32\u0e23\u0e23\u0e35\u0e40\u0e0b\u0e47\u0e15\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19
+LBL_zimbraFeatureResetPasswordStatus = \u0e2a\u0e16\u0e32\u0e19\u0e30\u0e02\u0e2d\u0e07\u0e04\u0e38\u0e13\u0e2a\u0e21\u0e1a\u0e31\u0e15\u0e34\u0e01\u0e32\u0e23\u0e23\u0e35\u0e40\u0e0b\u0e47\u0e15\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19:
+NAD_AccountRecoveryOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e01\u0e32\u0e23\u0e01\u0e39\u0e49\u0e04\u0e37\u0e19\u0e1a\u0e31\u0e0d\u0e0a\u0e35
+LBL_zimbraPrefPasswordRecoveryAddress = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e2a\u0e33\u0e23\u0e2d\u0e07:
+MSG_zimbraPrefPasswordRecoveryAddress = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e2a\u0e33\u0e23\u0e2d\u0e07
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u0e2a\u0e16\u0e32\u0e19\u0e30\u0e01\u0e32\u0e23\u0e22\u0e37\u0e19\u0e22\u0e31\u0e19\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e2a\u0e33\u0e23\u0e2d\u0e07:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u0e2a\u0e16\u0e32\u0e19\u0e30\u0e01\u0e32\u0e23\u0e22\u0e37\u0e19\u0e22\u0e31\u0e19\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e2a\u0e33\u0e23\u0e2d\u0e07
+recoveryAddressNotEmptyError = \u0e44\u0e21\u0e48\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e44\u0e14\u0e49\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e44\u0e21\u0e48\u0e44\u0e14\u0e49\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e2a\u0e16\u0e32\u0e19\u0e30
+recoveryAddressRequiredError = \u0e15\u0e49\u0e2d\u0e07\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2d\u0e35\u0e40\u0e21\u0e25\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e2a\u0e16\u0e32\u0e19\u0e30\u0e44\u0e14\u0e49\u0e23\u0e31\u0e1a\u0e01\u0e32\u0e23\u0e22\u0e37\u0e19\u0e22\u0e31\u0e19\u0e41\u0e25\u0e49\u0e27
+recoveryAddressStatusPendingNotAllowedError = \u0e1c\u0e39\u0e49\u0e14\u0e39\u0e41\u0e25\u0e23\u0e30\u0e1a\u0e1a\u0e44\u0e21\u0e48\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e23\u0e2d\u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e01\u0e32\u0e23\u0e44\u0e14\u0e49
+
 externalAccountNote = \u0e1a\u0e31\u0e0d\u0e0a\u0e35\u0e19\u0e35\u0e49\u0e43\u0e0a\u0e49\u0e01\u0e32\u0e23\u0e23\u0e31\u0e1a\u0e2a\u0e48\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e20\u0e32\u0e22\u0e19\u0e2d\u0e01
 
 NAD_ProxyAllowedDomains = \u0e42\u0e14\u0e40\u0e21\u0e19\u0e17\u0e35\u0e48\u0e1e\u0e23\u0e47\u0e2d\u0e01\u0e0b\u0e35\u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15
@@ -2607,6 +2618,12 @@ NAD_WizConfigComplete = \u0e01\u0e32\u0e23\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e04\u
 NAD_Prov_ConfigSummary = \u0e2a\u0e23\u0e38\u0e1b\u0e01\u0e32\u0e23\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e01\u0e32\u0e23\u0e40\u0e15\u0e23\u0e35\u0e22\u0e21\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e2d\u0e31\u0e15\u0e42\u0e19\u0e21\u0e31\u0e15\u0e34
 LBL_setPassword = \u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32
 LBL_unsetPassword = \u0e44\u0e21\u0e48\u0e44\u0e14\u0e49\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32
+LBL_unset = \u0e44\u0e21\u0e48\u0e44\u0e14\u0e49\u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32
+LBL_enabled = \u0e40\u0e1b\u0e34\u0e14\u0e01\u0e32\u0e23\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
+LBL_suspended = \u0e17\u0e35\u0e48\u0e16\u0e39\u0e01\u0e23\u0e30\u0e07\u0e31\u0e1a
+LBL_disabled = \u0e1e\u0e34\u0e01\u0e32\u0e23
+LBL_pending = \u0e23\u0e2d\u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e01\u0e32\u0e23
+LBL_verified = \u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e41\u0e25\u0e49\u0e27
 LBL_ManualProvision = \u0e01\u0e32\u0e23\u0e40\u0e15\u0e23\u0e35\u0e22\u0e21\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e14\u0e49\u0e27\u0e22\u0e15\u0e19\u0e40\u0e2d\u0e07
 LBL_ApplyButton = \u0e19\u0e33\u0e44\u0e1b\u0e43\u0e0a\u0e49
 LBL_ManualProvAccount = \u0e1a\u0e31\u0e0d\u0e0a\u0e35\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e40\u0e15\u0e23\u0e35\u0e22\u0e21\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e14\u0e49\u0e27\u0e22\u0e15\u0e19\u0e40\u0e2d\u0e07
