--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2531,6 +2531,17 @@ NAD_zimbraSMIMEFeature = S/MIME \u00d6zellikleri
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Son kullan\u0131c\u0131n\u0131n S/MIME sertifikalar\u0131 yay\u0131nlamas\u0131na ve kald\u0131rmas\u0131na izin ver
 LBL_zimbraFeatureSMIMEEnabled = S/MIME\u2019yi etkinle\u015ftir
 
+NAD_zimbraResetPasswordFeature = \u015eifre S\u0131f\u0131rlama \u00d6zelli\u011fi
+LBL_zimbraFeatureResetPasswordStatus = \u015eifre s\u0131f\u0131rlama \u00f6zelli\u011finin durumu:
+NAD_AccountRecoveryOptions = Hesap geri alma ayarlar\u0131
+LBL_zimbraPrefPasswordRecoveryAddress = Kurtarma e-posta adresi:
+MSG_zimbraPrefPasswordRecoveryAddress = Kurtarma e-posta adresi
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Kurtarma e-posta adresi do\u011frulama durumu:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Kurtarma e-posta adresi do\u011frulama durumu
+recoveryAddressNotEmptyError = Durum ayarlanmad\u0131\u011f\u0131nda e-posta adresi ayarlanamaz.
+recoveryAddressRequiredError = Durum do\u011fruland\u0131\u011f\u0131nda e-posta adresi ayarlanmal\u0131d\u0131r.
+recoveryAddressStatusPendingNotAllowedError = Beklemede y\u00f6netici taraf\u0131ndan ayarlanamaz.
+
 externalAccountNote = Bu hesap, d\u0131\u015f posta aktar\u0131m\u0131 kullan\u0131yor
 
 NAD_ProxyAllowedDomains = Yard\u0131mc\u0131 Sunucu \u0130zin Verilen Etki Alanlar\u0131
@@ -2603,6 +2614,12 @@ NAD_WizConfigComplete = Otomatik sa\u011flama yap\u0131land\u0131rmas\u0131 tama
 NAD_Prov_ConfigSummary = Otomatik sa\u011flama ayarlar\u0131n\u0131n \u00f6zeti
 LBL_setPassword = ayarlanm\u0131\u015f
 LBL_unsetPassword = ayarlanmam\u0131\u015f
+LBL_unset = Ayarlanmad\u0131
+LBL_enabled = Etkin
+LBL_suspended = Ask\u0131ya al\u0131nd\u0131
+LBL_disabled = engelli
+LBL_pending = Kadar
+LBL_verified = Do\u011frulanm\u0131\u015f
 LBL_ManualProvision = Manuel sa\u011flama
 LBL_ApplyButton = Uygula
 LBL_ManualProvAccount = Manuel sa\u011flama hesab\u0131
