--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2522,6 +2522,17 @@ NAD_zimbraSMIMEFeature = S/MIME \u529f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u5141\u8bb8\u6700\u7ec8\u7528\u6237\u53d1\u5e03\u548c\u79fb\u9664 S/MIME \u8bc1\u4e66
 LBL_zimbraFeatureSMIMEEnabled = \u542f\u7528 S/MIME
 
+NAD_zimbraResetPasswordFeature = \u5bc6\u7801\u91cd\u7f6e\u529f\u80fd
+LBL_zimbraFeatureResetPasswordStatus = \u5bc6\u7801\u91cd\u7f6e\u529f\u80fd\u72b6\u6001\uff1a
+NAD_AccountRecoveryOptions = \u5e10\u6237\u6062\u590d\u9009\u9879
+LBL_zimbraPrefPasswordRecoveryAddress = \u627e\u56de\u7535\u5b50\u90ae\u4ef6\u5730\u5740\uff1a
+MSG_zimbraPrefPasswordRecoveryAddress = \u627e\u56de\u7535\u5b50\u90ae\u4ef6\u5730\u5740
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u6062\u590d\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u9a8c\u8bc1\u72b6\u6001\uff1a
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u6062\u590d\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u9a8c\u8bc1\u72b6\u6001
+recoveryAddressNotEmptyError = \u72b6\u6001\u672a\u8bbe\u7f6e\u65f6\u65e0\u6cd5\u8bbe\u7f6e\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002
+recoveryAddressRequiredError = \u9a8c\u8bc1\u72b6\u6001\u65f6\u5fc5\u987b\u8bbe\u7f6e\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002
+recoveryAddressStatusPendingNotAllowedError = \u7ba1\u7406\u5458\u65e0\u6cd5\u8bbe\u7f6e\u5f85\u5904\u7406\u3002
+
 externalAccountNote = \u6b64\u5e10\u6237\u4f7f\u7528\u5916\u90e8\u90ae\u4ef6\u4f20\u8f93
 
 NAD_ProxyAllowedDomains = \u4ee3\u7406\u5141\u8bb8\u7684\u57df
@@ -2594,6 +2605,12 @@ NAD_WizConfigComplete = \u81ea\u52a8\u914d\u7f6e\u914d\u7f6e\u5b8c\u6210
 NAD_Prov_ConfigSummary = \u81ea\u52a8\u914d\u7f6e\u8bbe\u7f6e\u6458\u8981
 LBL_setPassword = \u8bbe\u7f6e
 LBL_unsetPassword = \u53d6\u6d88\u8bbe\u7f6e
+LBL_unset = \u6ca1\u6709\u8bbe\u7f6e
+LBL_enabled = \u542f\u7528
+LBL_suspended = \u6682\u505c
+LBL_disabled = \u6b8b
+LBL_pending = \u6709\u5f85
+LBL_verified = \u9a8c\u8bc1
 LBL_ManualProvision = \u624b\u52a8\u914d\u7f6e
 LBL_ApplyButton = \u5e94\u7528
 LBL_ManualProvAccount = \u624b\u52a8\u914d\u7f6e\u7684\u5e10\u6237
