--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2511,6 +2511,17 @@ NAD_zimbraSMIMEFeature = Funciones S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permiten al usuario final publicar y eliminar certificados S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activar S/MIME
 
+NAD_zimbraResetPasswordFeature = Funci\u00f3n de restablecimiento de contrase\u00f1a
+LBL_zimbraFeatureResetPasswordStatus = Estado de la funci\u00f3n de restablecimiento de contrase\u00f1a:
+NAD_AccountRecoveryOptions = Opciones de recuperaci\u00f3n de cuenta
+LBL_zimbraPrefPasswordRecoveryAddress = Direcci\u00f3n de correo electr\u00f3nico de recuperaci\u00f3n:
+MSG_zimbraPrefPasswordRecoveryAddress = Direcci\u00f3n de correo electr\u00f3nico de recuperaci\u00f3n
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Estado de verificaci\u00f3n de la direcci\u00f3n de correo electr\u00f3nico de recuperaci\u00f3n:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Estado de verificaci\u00f3n de la direcci\u00f3n de correo electr\u00f3nico de recuperaci\u00f3n
+recoveryAddressNotEmptyError = La direcci\u00f3n de correo electr\u00f3nico no se puede configurar cuando el estado no est\u00e1 establecido.
+recoveryAddressRequiredError = La direcci\u00f3n de correo electr\u00f3nico debe establecerse cuando se verifica el estado.
+recoveryAddressStatusPendingNotAllowedError = El administrador no puede establecer pendiente.
+
 externalAccountNote = Esta cuenta utiliza el transporte de correo externo
 
 NAD_ProxyAllowedDomains = Dominios permitidos por el proxy
@@ -2583,6 +2594,12 @@ NAD_WizConfigComplete = Configuraci\u00f3n del aprovisionamiento autom\u00e1tico
 NAD_Prov_ConfigSummary = Resumen de la configuraci\u00f3n del aprovisionamiento autom\u00e1tico
 LBL_setPassword = configurado
 LBL_unsetPassword = sin configurar
+LBL_unset = No establecido
+LBL_enabled = Habilitado
+LBL_suspended = Suspendido
+LBL_disabled = Discapacitado
+LBL_pending = pendiente
+LBL_verified = Verificado
 LBL_ManualProvision = Aprovisionamiento manual
 LBL_ApplyButton = Aplicar
 LBL_ManualProvAccount = Cuenta para el aprovisionamiento autom\u00e1tico
