--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -2536,6 +2536,17 @@ NAD_zimbraSMIMEFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0e88\u0eb4\u0e87\u0e9e\u0eb4\u0ea1 \u0eab\u0ebc\u0eb7 \u0ea5\u0ebb\u0e9a\u0ec3\u0e9a\u0ea2\u0eb1\u0ec9\u0e87\u0ea2\u0eb7\u0e99 S/MIME
 LBL_zimbraFeatureSMIMEEnabled = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99 S/MIME
 
+NAD_zimbraResetPasswordFeature = \u0e84\u0eb8\u0e99\u0eaa\u0ebb\u0ea1\u0e9a\u0eb1\u0e94\u0e81\u0eb2\u0e99\u0e95\u0eb1\u0ec9\u0e87\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ec3\u0edd\u0ec8
+LBL_zimbraFeatureResetPasswordStatus = \u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u0e82\u0ead\u0e87\u0e84\u0eb8\u0e99\u0eaa\u0ebb\u0ea1\u0e9a\u0eb1\u0e94\u0e81\u0eb2\u0e99\u0e95\u0eb1\u0ec9\u0e87\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0ec3\u0edd\u0ec8:
+NAD_AccountRecoveryOptions = \u0e95\u0ebb\u0ea7\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0e81\u0eb2\u0e99\u0e81\u0eb9\u0ec9\u0e84\u0eb7\u0e99\u0e9a\u0eb1\u0e99\u0e8a\u0eb5
+LBL_zimbraPrefPasswordRecoveryAddress = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7\u0e81\u0eb9\u0ec9\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99:
+MSG_zimbraPrefPasswordRecoveryAddress = \u0e81\u0eb9\u0ec9\u0e84\u0eb7\u0e99\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u0e81\u0eb2\u0e99\u0ea2\u0eb7\u0e99\u0ea2\u0eb1\u0e99\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7\u0e81\u0eb9\u0ec9\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u0e81\u0eb2\u0e99\u0ea2\u0eb7\u0e99\u0ea2\u0eb1\u0e99\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7\u0e81\u0eb9\u0ec9\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
+recoveryAddressNotEmptyError = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea5\u0ecc\u0e9a\u0ecd\u0ec8\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0e96\u0eb7\u0e81\u0e95\u0eb1\u0ec9\u0e87\u0ec4\u0e94\u0ec9\u0ec0\u0ea1\u0eb7\u0ec8\u0ead\u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u0e9a\u0ecd\u0ec8\u0ec4\u0e94\u0ec9\u0e95\u0eb1\u0ec9\u0e87.
+recoveryAddressRequiredError = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0ead\u0eb5\u0ec0\u0ea1\u0ea7\u0e95\u0ec9\u0ead\u0e87\u0e96\u0eb7\u0e81\u0e95\u0eb1\u0ec9\u0e87\u0ec0\u0ea1\u0eb7\u0ec8\u0ead\u0eaa\u0eb0\u0e96\u0eb2\u0e99\u0eb0\u0e96\u0eb7\u0e81\u0ea2\u0eb7\u0e99\u0ea2\u0eb1\u0e99.
+recoveryAddressStatusPendingNotAllowedError = \u0e9c\u0eb9\u0ec9\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ec1\u0e8d\u0e87\u0ea5\u0eb0\u0e9a\u0ebb\u0e9a\u0e9a\u0ecd\u0ec8\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0e95\u0eb1\u0ec9\u0e87\u0e84\u0ec9\u0eb2\u0e87\u0ec4\u0ea7\u0ec9\u0ec4\u0e94\u0ec9.
+
 externalAccountNote = \u0e9a\u0eb1\u0e99\u0e8a\u0eb5\u0e99\u0eb5\u0ec9\u0e99\u0eb3\u0ec3\u0e8a\u0ec9\u0e81\u0eb2\u0e99\u0e82\u0ebb\u0e99\u0eaa\u0ebb\u0ec8\u0e87\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u0e88\u0eb2\u0e81\u0e9e\u0eb2\u0e8d\u0e99\u0ec9\u0ead\u0e87 
 
 NAD_ProxyAllowedDomains = \u0e9e\u0ea3\u0eb1\u0ead\u0e81\u0e8a\u0eb5\u0e97\u0eb5\u0ec8\u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0ec2\u0e94\u0ec0\u0ea1\u0e99
@@ -2608,6 +2619,12 @@ NAD_WizConfigComplete = \u0ec1\u0e9a\u0e9a\u0ead\u0eb1\u0e94\u0e95\u0eb0\u0ec2\u
 NAD_Prov_ConfigSummary = \u0e9a\u0ebb\u0e94\u0eaa\u0eb0\u0eab\u0ebc\u0eb8\u0e9a\u0e82\u0ead\u0e87\u0e81\u0eb2\u0e99\u0e95\u0eb1\u0ec9\u0e87\u0e84\u0ec8\u0eb2\u0e81\u0eb2\u0e99\u0eaa\u0eb0\u0edc\u0ead\u0e87-\u0ec1\u0e9a\u0e9a\u0ead\u0eb1\u0e94\u0e95\u0eb0\u0ec2\u0e99\u0ea1\u0eb1\u0e94
 LBL_setPassword = \u0e81\u0eb3\u0e99\u0ebb\u0e94
 LBL_unsetPassword = \u0e9a\u0ecd\u0ec8\u0e81\u0eb3\u0e99\u0ebb\u0e94
+LBL_unset = \u0e9a\u0ecd\u0ec8\u0ec4\u0e94\u0ec9\u0e95\u0eb1\u0ec9\u0e87
+LBL_enabled = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99
+LBL_suspended = \u0ec2\u0e88\u0eb0
+LBL_disabled = \u0e9e\u0eb4\u0e81\u0eb2\u0e99
+LBL_pending = \u0e97\u0eb5\u0ec8\u0e8d\u0eb1\u0e87\u0e84\u0ec9\u0eb2\u0e87
+LBL_verified = \u0ea2\u0eb1\u0ec9\u0e87\u0ea2\u0eb7\u0e99\u0ec1\u0ea5\u0ec9\u0ea7
 LBL_ManualProvision = \u0e81\u0eb2\u0e99\u0eaa\u0eb0\u0edc\u0ead\u0e87\u0e94\u0ec9\u0ea7\u0e8d\u0e95\u0ebb\u0ea7\u0ec0\u0ead\u0e87
 LBL_ApplyButton = \u0e99\u0eb3\u0ec3\u0e8a\u0ec9
 LBL_ManualProvAccount = \u0e9a\u0eb1\u0e99\u0e8a\u0eb5\u0eaa\u0eb3\u0ea5\u0eb1\u0e9a\u0e81\u0eb2\u0e99\u0eaa\u0eb0\u0edc\u0ead\u0e87\u0e94\u0ec9\u0ea7\u0e8d\u0e95\u0ebb\u0ea7\u0ec0\u0ead\u0e87
