--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2466,6 +2466,17 @@ NAD_zimbraSMIMEFeature = Recursos do S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permitir que usu\u00e1rio final publique e remova certificados do S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Ativar S/MIME
 
+NAD_zimbraResetPasswordFeature = Recurso de redefini\u00e7\u00e3o de senha
+LBL_zimbraFeatureResetPasswordStatus = Status do recurso de redefini\u00e7\u00e3o de senha:
+NAD_AccountRecoveryOptions = Op\u00e7\u00f5es de recupera\u00e7\u00e3o de conta
+LBL_zimbraPrefPasswordRecoveryAddress = Endere\u00e7o de e-mail de recupera\u00e7\u00e3o:
+MSG_zimbraPrefPasswordRecoveryAddress = Endere\u00e7o de e-mail de recupera\u00e7\u00e3o
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Status de verifica\u00e7\u00e3o do endere\u00e7o de e-mail de recupera\u00e7\u00e3o:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Status de verifica\u00e7\u00e3o do endere\u00e7o de e-mail de recupera\u00e7\u00e3o
+recoveryAddressNotEmptyError = O endere\u00e7o de e-mail n\u00e3o pode ser definido quando o status n\u00e3o est\u00e1 definido.
+recoveryAddressRequiredError = O endere\u00e7o de e-mail deve ser definido quando o status for verificado.
+recoveryAddressStatusPendingNotAllowedError = Pendente n\u00e3o pode ser definido pelo administrador.
+
 externalAccountNote = Esta conta usa transporte de e-mail externo
 
 NAD_ProxyAllowedDomains = Dom\u00ednios permitidos pelo proxy
@@ -2536,6 +2547,12 @@ NAD_WizConfigComplete = Configura\u00e7\u00e3o da provis\u00e3o autom\u00e1tica 
 NAD_Prov_ConfigSummary = Resumo das configura\u00e7\u00f5es de provis\u00e3o autom\u00e1tica
 LBL_setPassword = definir
 LBL_unsetPassword = remover defini\u00e7\u00e3o
+LBL_unset = N\u00e3o configurado
+LBL_enabled = ativado
+LBL_suspended = Suspenso
+LBL_disabled = Desativado
+LBL_pending = Pendente
+LBL_verified = Verificado
 LBL_ManualProvision = Provis\u00e3o manual
 LBL_ApplyButton = Aplicar
 LBL_ManualProvAccount = Conta da provis\u00e3o manual
