--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2542,6 +2542,17 @@ NAD_zimbraSMIMEFeature  = T\u00ednh n\u0103ng S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Cho ph\u00e9p ng\u01b0\u1eddi d\u00f9ng cu\u1ed1i \u0111\u0103ng t\u1ea3i v\u00e0 x\u00f3a ch\u1ee9ng ch\u1ec9 S/MIME
 LBL_zimbraFeatureSMIMEEnabled = B\u1eadt S/MIME:
 
+NAD_zimbraResetPasswordFeature = T\u00ednh n\u0103ng \u0111\u1eb7t l\u1ea1i m\u1eadt kh\u1ea9u
+LBL_zimbraFeatureResetPasswordStatus = Tr\u1ea1ng th\u00e1i c\u1ee7a t\u00ednh n\u0103ng \u0111\u1eb7t l\u1ea1i m\u1eadt kh\u1ea9u:
+NAD_AccountRecoveryOptions = T\u00f9y ch\u1ecdn kh\u00f4i ph\u1ee5c t\u00e0i kho\u1ea3n
+LBL_zimbraPrefPasswordRecoveryAddress = \u0110\u1ecba ch\u1ec9 email kh\u00f4i ph\u1ee5c:
+MSG_zimbraPrefPasswordRecoveryAddress = \u0110\u1ecba ch\u1ec9 email kh\u00f4i ph\u1ee5c
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Tr\u1ea1ng th\u00e1i x\u00e1c minh \u0111\u1ecba ch\u1ec9 email kh\u00f4i ph\u1ee5c:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Tr\u1ea1ng th\u00e1i x\u00e1c minh \u0111\u1ecba ch\u1ec9 email kh\u00f4i ph\u1ee5c
+recoveryAddressNotEmptyError = Kh\u00f4ng th\u1ec3 \u0111\u1eb7t \u0111\u1ecba ch\u1ec9 email khi tr\u1ea1ng th\u00e1i kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1eb7t.
+recoveryAddressRequiredError = \u0110\u1ecba ch\u1ec9 email ph\u1ea3i \u0111\u01b0\u1ee3c \u0111\u1eb7t khi tr\u1ea1ng th\u00e1i \u0111\u01b0\u1ee3c x\u00e1c minh.
+recoveryAddressStatusPendingNotAllowedError = Qu\u1ea3n tr\u1ecb vi\u00ean kh\u00f4ng th\u1ec3 \u0111\u1eb7t tr\u1ea1ng th\u00e1i ch\u1edd x\u1eed l\u00fd.
+
 externalAccountNote = T\u00e0i kho\u1ea3n n\u00e0y s\u1eed d\u1ee5ng d\u1ecbch v\u1ee5 v\u1eadn chuy\u1ec3n th\u01b0 b\u00ean ngo\u00e0i
 
 NAD_ProxyAllowedDomains = T\u00ean mi\u1ec1n cho ph\u00e9p proxy
@@ -2614,6 +2625,12 @@ NAD_WizConfigComplete = C\u1ea5u h\u00ecnh t\u1ef1 \u0111\u1ed9ng d\u1ef1 li\u1e
 NAD_Prov_ConfigSummary =  T\u00f3m t\u1eaft thi\u1ebft l\u1eadp t\u1ef1 \u0111\u1ed9ng d\u1ef1 li\u1ec7u:
 LBL_setPassword = thi\u1ebft l\u1eadp
 LBL_unsetPassword =  kh\u00f4ng thi\u1ebft l\u1eadp
+LBL_unset = Kh\u00f4ng \u0111\u01b0\u1ee3c thi\u1ebft l\u1eadp
+LBL_enabled = \u0110\u00e3 b\u1eadt
+LBL_suspended = \u0110\u00ecnh ch\u1ec9
+LBL_disabled = t\u00e0n t\u1eadt
+LBL_pending = \u0110ang ch\u1edd x\u1eed l\u00fd
+LBL_verified = \u0110\u00e3 x\u00e1c minh
 LBL_ManualProvision = D\u1ef1 li\u1ec7u th\u1ee7 c\u00f4ng
 LBL_ApplyButton = \u00c1p d\u1ee5ng
 LBL_ManualProvAccount = T\u00e0i kho\u1ea3n \u0111\u1ec3 d\u1ef1 li\u1ec7u th\u1ee7 c\u00f4ng
