--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2535,6 +2535,17 @@ NAD_zimbraSMIMEFeature = S/MIME \u529f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u5141\u8a31\u4e00\u822c\u4f7f\u7528\u8005\u767c\u4f48\u548c\u79fb\u9664 S/MIME \u6191\u8b49
 LBL_zimbraFeatureSMIMEEnabled = \u555f\u7528 S/MIME
 
+NAD_zimbraResetPasswordFeature = \u5bc6\u78bc\u91cd\u7f6e\u529f\u80fd
+LBL_zimbraFeatureResetPasswordStatus = \u5bc6\u78bc\u91cd\u8a2d\u529f\u80fd\u72c0\u614b\uff1a
+NAD_AccountRecoveryOptions = \u5e33\u6236\u6062\u5fa9\u9078\u9805
+LBL_zimbraPrefPasswordRecoveryAddress = \u627e\u56de\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\uff1a
+MSG_zimbraPrefPasswordRecoveryAddress = \u627e\u56de\u96fb\u5b50\u90f5\u4ef6\u5730\u5740
+LBL_zimbraPrefPasswordRecoveryAddressStatus = \u6062\u5fa9\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u9a57\u8b49\u72c0\u614b\uff1a
+MSG_zimbraPrefPasswordRecoveryAddressStatus = \u6062\u5fa9\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u9a57\u8b49\u72c0\u614b
+recoveryAddressNotEmptyError = \u72c0\u614b\u672a\u8a2d\u5b9a\u6642\u7121\u6cd5\u8a2d\u5b9a\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u3002
+recoveryAddressRequiredError = \u9a57\u8b49\u72c0\u614b\u6642\u5fc5\u9808\u8a2d\u5b9a\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u3002
+recoveryAddressStatusPendingNotAllowedError = \u7ba1\u7406\u54e1\u7121\u6cd5\u8a2d\u5b9a\u5f85\u8655\u7406\u3002
+
 externalAccountNote = \u6b64\u5e33\u6236\u4f7f\u7528\u5916\u90e8\u90f5\u4ef6\u50b3\u8f38
 
 NAD_ProxyAllowedDomains = Proxy \u5141\u8a31\u7684\u7db2\u57df
@@ -2607,6 +2618,12 @@ NAD_WizConfigComplete = \u81ea\u52d5\u4f48\u5efa\u8a2d\u5b9a\u5b8c\u6210
 NAD_Prov_ConfigSummary = \u81ea\u52d5\u4f48\u5efa\u8a2d\u5b9a\u6458\u8981
 LBL_setPassword = \u8a2d\u5b9a
 LBL_unsetPassword = \u53d6\u6d88\u8a2d\u5b9a
+LBL_unset = \u6c92\u6709\u8a2d\u7f6e
+LBL_enabled = \u555f\u7528
+LBL_suspended = \u66ab\u505c
+LBL_disabled = \u6b98
+LBL_pending = \u6709\u5f85
+LBL_verified = \u5df2\u9a57\u8b49
 LBL_ManualProvision = \u624b\u52d5\u4f48\u5efa
 LBL_ApplyButton = \u5957\u7528
 LBL_ManualProvAccount = \u624b\u52d5\u4f48\u5efa\u7684\u5e33\u6236
