--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -2792,3 +2792,5 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
+ERROR_Feature_Not_Licensed = You are not currently not licensed for this feature.
+INFO_goToLicense = Please see Configure -> Global Settings -> License for more information.
